test/files/neg/t961.check
t961.scala:11: error: Temp.B.type does not take parameters
  B() match {
   ^
1 error
